// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SharePost should render using the process.env.BASE_URL is defined 1`] = `
<section
  className="jsx-3021568651"
>
  <h3
    className="jsx-3021568651"
  >
    Share the post
  </h3>
  <div
    className="jsx-3021568651"
  >
    <div
      className="jsx-3021568651"
    >
      <script
        async={true}
        className="jsx-3021568651"
        src="https://platform.linkedin.com/in.js"
        type="text/javascript"
      >
        lang: en_US
      </script>
      <script
        className="jsx-3021568651"
        data-url="http://example.com/mocked-path"
        type="IN/Share"
      />
    </div>
    <div
      className="jsx-3021568651"
    >
      <a
        className="jsx-3021568651 twitter-share-button"
        data-show-count="false"
        data-text="Testing Title"
        href="https://twitter.com/share?ref_src=twsrc%5Etfw"
      >
        Tweet
      </a>
      <script
        async={true}
        charSet="utf-8"
        className="jsx-3021568651"
        src="https://platform.twitter.com/widgets.js"
      />
    </div>
  </div>
</section>
`;

exports[`SharePost should render when process.env.BASE_URL is undefined 1`] = `
<section
  className="jsx-3021568651"
>
  <h3
    className="jsx-3021568651"
  >
    Share the post
  </h3>
  <div
    className="jsx-3021568651"
  >
    <div
      className="jsx-3021568651"
    >
      <script
        async={true}
        className="jsx-3021568651"
        src="https://platform.linkedin.com/in.js"
        type="text/javascript"
      >
        lang: en_US
      </script>
      <script
        className="jsx-3021568651"
        data-url="mocked-path"
        type="IN/Share"
      />
    </div>
    <div
      className="jsx-3021568651"
    >
      <a
        className="jsx-3021568651 twitter-share-button"
        data-show-count="false"
        data-text="Testing Title"
        href="https://twitter.com/share?ref_src=twsrc%5Etfw"
      >
        Tweet
      </a>
      <script
        async={true}
        charSet="utf-8"
        className="jsx-3021568651"
        src="https://platform.twitter.com/widgets.js"
      />
    </div>
  </div>
</section>
`;
